--- a/style.css
+++ b/style.css
@@ -1,70 +1,64 @@
-html,
-body {
+* {
     margin: 0;
-    padding: 0;
+    padding:  0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.main-header {
-    background-color: rgba(0, 0, 0, .3);
-    padding-bottom: 10px;
+.hidden {
+    visibility: hidden;
+    display:none !important;
 }
 
-.title {
+#basketball-title {
     text-align: center;
-    margin: 0;
-    font-size: 8em;
-    font-family: "Helvetica";
-    font-weight: normal;
-    color: white;
+    font-weight: bold;
+    margin-block: 2rem;
 }
 
-#card-container {
-    display: flex;
-    justify-content: center;
-    margin: 20px;
+#layout {
+    display: grid;
+    width: 95%;
+    margin: auto;
+    grid-template-columns: 70% 30%;
+    height:100%
+}
+
+.grid-item {
+    width:100%;
+}
+
+#card-grid {
+    border-right: 1px solid black;
+    display: grid;
+    width: 100%;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit,minmax(10rem,1fr));
+    grid-gap: 2rem;
 }
 
 .card {
-    width: 300px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    flex-grow: 1;
+    width: 10rem;
 }
 
-.card-content {
-    padding: 20px;
-    font-family: "Verdana";
-    color: #777;
-}
-
-.card-content h2 {
-    margin-top: 0;
-    font-size: 20px;
-}
-
-.card img {
+.card > img {
     width: 100%;
-    height: auto;
 }
 
-.footer {
+#pagination {
+    margin-top: 1rem;
+    width: 100%;
     display: flex;
     justify-content: center;
-    background-color: rgba(0, 0, 0, .3);
-    padding: 10px;
 }
 
-button {
-    text-align: center;
-    background-color: #666;
-    border: none;
-    padding-left: 10px;
-    padding-right: 10px;
-    height: 40px;
-    border-radius: 10px;
-    color: white;
-    font-size: 22px;
-    cursor: pointer;
-    margin: 5px;
+#basketball-court {
+    background-image: url('./img/5basketball_court.jpg');
+    background-repeat: no-repeat;
+    background-size:cover;
 }
