--- a/style.css
+++ b/style.css
@@ -58,57 +58,49 @@
 }
 
 #basketball-court {
+    width: 100%;
+    height: 100%;
+    position: relative;
     background-image: url('./img/5basketball_court.jpg');
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center center; 
     background-size:contain;
 }
 #one {
     position:absolute;
-    bottom:0;
-    right:0;
-    margin-bottom:32% !important; 
-    margin-right:24.2% !important;
+    bottom:62%;
+    right:50%;
 }
 
 
 #two {
     position:absolute;
-    bottom:0;
-    right:0;
-    margin-bottom:45% !important; 
-    margin-right:35.2% !important;
+    bottom:80%;
+    right:68%;
 }
 
 #three {
     position:absolute;
-    bottom:0;
-    right:0;
-    margin-bottom:45% !important; 
-    margin-right:13.3% !important;
+    bottom:80%;
+    right:32%;
 }
 
 #four {
     position:absolute;
-    bottom:0;
-    right:0;
-    margin-bottom:45% !important; 
-    margin-right:27% !important;
+    bottom:75%;
+    right:55%;
 }
 
 #five {
     position:absolute;
-    bottom:0;
-    right:0;
-    margin-bottom:39% !important; 
-    margin-right:22% !important;
+    bottom:90%;
+    right:45%;
 }
 
 #one, #two, #three,#four,#five {
     width: 2.5rem;
     height: 2.5rem;
-    margin: 10px;
-    padding: 10px;
+    transform: translate(50%,50%);
     border: 1px solid black;
     display: flex;
     justify-content: center;
