--- a/style.css
+++ b/style.css
@@ -98,10 +98,12 @@
 }
 
 #one, #two, #three,#four,#five {
+    text-align: center;
+    border-radius: 100%;
     width: 6rem;
     height: 6rem;
     transform: translate(50%,50%);
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
