--- a/style.css
+++ b/style.css
@@ -59,13 +59,18 @@
 }
 
 #basketball-court {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 90vh;
     position: relative;
-    background-image: url('./img/2basketball_court.jpg');
     background-repeat: no-repeat;
     background-position: center center; 
     background-size:contain;
+}
+#basketball-court > img {
+    width:100%;
+    height: 100%;
 }
 
 #one {
@@ -145,4 +150,17 @@
     height: 100%;
     outline:none;
     border: 0;
+}
+
+#clear-contents {
+    width: 4rem;
+    background-color: black;
+    color: white;
+    margin:2rem auto 2rem auto;  
+    transition: 2ms;  
+}
+
+#clear-contents:hover {
+    background-color: darkgray;
+    transform: scale(0.9);
 }
